<!--
  ~ Copyright (c): All rights reserved by EXCELLENCE ICT, 2017
  -->

<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="add_credit">Add Credit</string>
    <string name="edit_credit">Edit Credit</string>
    <string name="add_debit">Add Debit</string>
    <string name="edit_debit">Edit Debit</string>
    <string name="scan">Scan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current credit [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <string name="action_delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current credit [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current credit was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_credit_successful">Credit deleted</string>

    <!-- Toast message in editor when current debit was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_debit_successful">Debit deleted</string>

    <!-- Toast message in editor when current credit has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_credit_failed">Error with deleting credit!</string>

    <!-- Toast message in editor when current debit has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_debit_failed">Error with deleting debit!</string>

    <!-- Dialog message to ask the user to confirm deleting the current credit [CHAR LIMIT=NONE] -->
    <string name="delete_credit_dialog_msg">Delete this credit?</string>

    <!-- Dialog message to ask the user to confirm deleting the current debit [CHAR LIMIT=NONE] -->
    <string name="delete_debit_dialog_msg">Delete this debit?</string>

    <!-- Dialog button text for the option to confirm deleting the current credit [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <string name="title_activity_add_debit">AddDebitActivity</string>

    <string name="home">Home</string>

    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="balance">Balance</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="debit_">DEBIT:</string>
    <string name="credit_">CREDIT:</string>
    <string name="balance_">BALANCE:</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="debit_categories">Debit Categories</string>
    <string name="credit_categories">Credit Categories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics">Statistics</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="year_debits">%d Debits</string>
    <string name="year_credits">%d Credits</string>
    <string name="privacy_policy">
        <a href="https://mknishad.github.io/expense-tracker-android/">Privacy Policy</a>
    </string>
    <string-array name="debit_categories">
        <item>Select a category</item>
        <item>Car</item>
        <item>Charity</item>
        <item>Clothes</item>
        <item>Communication</item>
        <item>Education</item>
        <item>Eating Out</item>
        <item>Electronics</item>
        <item>Entertainment</item>
        <item>Fitness</item>
        <item>Food</item>
        <item>Gifts</item>
        <item>Health</item>
        <item>House</item>
        <item>Investment</item>
        <item>Loan Payment</item>
        <item>Miscellaneous</item>
        <item>Sports</item>
        <item>Taxy</item>
        <item>Toiletry</item>
        <item>Transport</item>
        <item>Utility Bills</item>
        <item>Vacation</item>
    </string-array>
    <!--    <string name="privacy_policy">Privacy Policy</string>-->
    <string-array name="credit_categories">
        <item>Select a category</item>
        <item>Salary</item>
        <item>Deposits</item>
        <item>Savings</item>
    </string-array>
</resources>
