<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_gray_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_credit"
            android:icon="@drawable/ic_add_circle_outline_gray_24dp"
            android:title="@string/credit" />
        <item
            android:id="@+id/nav_debit"
            android:icon="@drawable/ic_remove_circle_outline_gray_24dp"
            android:title="@string/debit" />
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_balance_gray_24dp"
            android:title="@string/balance" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_gray_24dp"
            android:title="@string/history" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_gray_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline_gray_24dp"
            android:title="@string/help" />
    </group>
</menu>
