<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.CreditEditorActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_credit_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="4dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_credit_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_calendar_gray_24dp"
                        android:hint="@string/date"
                        android:focusableInTouchMode="false"
                        android:inputType="text|date"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/image_button_credit_calendar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_calendar_gray_24dp"
                    android:visibility="gone" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_credit_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:padding="4dp">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_credit_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category"
                    android:maxLines="1"
                    android:inputType="textAutoComplete"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_credit_amount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_credit_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount"
                    android:maxLines="1"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_credit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:padding="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_credit_description"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:gravity="start"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
